<resources>
    <string name="app_name">My quotes</string>
    <string name="login_or_email">login or email</string>
    <string name="password">password</string>
    <string name="submit">Submit</string>
    <string name="login_failed">Login failed</string>
    <string name="missing_offline_data">Missing offline data</string>
    <string name="network_error">Network error</string>
    <string name="USER_SESSION">USER-SESSION</string>
    <string name="USER_LOGIN">USER-LOGIN</string>
    <string name="nb_of_fav_quotes">Number of fav quotes</string>
    <string name="login_image">login image</string>

    <string name="dialogue">Is a dialogue</string>
    <string name="not_dialogue">Is not a dialogue</string>
    <string name="private_quote">Is private</string>
    <string name="not_private_quote">Is not private</string>

    <string name="tags">Tags : %s</string>
    <string name="favorites_count">Favorites count : %d</string>
    <string name="upvotes_count">Upvotes count : %d</string>
    <string name="downvotes_count">Downvotes count : %d</string>
    <string name="id">Id : %d</string>
</resources>
